--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img{
 .categoria-videos{
     display:flex;
     overflow-x:auto;
-    padding-right:10;
+    padding-right:10px;
     gap:10px;
 }
 
